[tool.poetry]
name = "xserver-dbhelper"
version = "0.1.0"
description = ""
authors = ["kent <kent2980@gmail.com>"]
readme = "README.md"
packages = [{include = "xserver_dbhelper"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
