[tool.poetry]
name = "xserver-dbhelper"
version = "0.1.47"
description = ""
authors = ["kent <kent2980@gmail.com>"]
readme = "README.md"
packages = [{include = "xserver_dbhelper"}]

[tool.poetry.dependencies]
python = "^3.9"
sshtunnel = "^0.4.0"
pymysql = "^1.0.2"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
